@startuml
hide circle

class Persona {
    -String nombre
    -String dni
    +Persona(String nombre, String dni)
    +Persona(Persona persona)
    +void setNombre(String nombre)
}

class Principal {
    +void main(String[] args)
}

Persona <-- Principal : contiene

Principal : - Persona manuel
Principal : - Persona copia
Principal : - Persona referencia

note "manuel y referencia apuntan al mismo objeto" as N1
note "copia es un objeto diferente" as N2

manuel --> Persona : instancia de
copia --> Persona : instancia de
referencia --> Persona : referencia a manuel

@enduml